remove stupid container and make menu smaller instead, fix loader visibility

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,8 +8,3 @@
 	top: 0;
 	left: 0;
 }
-
-.container {
-	max-width: 1024px;
-	margin: 0 auto;
-}
