--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,8 +1,9 @@
 .menu {
-    width: 100%;
+    width: 1024px;
     height: 100px;
     font-size: .8em;
     color: white;
+    margin: 0 auto;
 }
 
 .menu-buttons {
